--- a/Presentation/appsettings.json
+++ b/Presentation/appsettings.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=SMSystem;MultipleActiveResultSets=True;Trusted_Connection=true;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=DESKTOP-FMA4MU8\\SQLEXPRESS;Database=SMSystem;MultipleActiveResultSets=True;Trusted_Connection=true;TrustServerCertificate=True;"
   }
 }
